# suzanne-metadata

./: .travis.yml  Cargo.toml  appveyor.yml
ci/: before_deploy.ps1  before_deploy.sh
src/: folder.rs  folder_list.rs  main.rs  music_library.rs  track.rs  track_list.rs  utils.rs
