[package]
name = "suzanne-metadata"
version = "0.1.0"
authors = ["Mukund Lakshman <yaymukund@gmail.com>"]
publish = false

[dependencies]
walkdir = "2.0.1"
id3 = "0.2.2"
indicatif = "0.8.0"
filetime = "0.1"
env_logger = "0.5"
clap = "2"
log = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
mp3-duration = "0.1"
