[package]
name = "suzanne-metadata"
version = "0.1.0"
authors = ["Mukund Lakshman <yaymukund@gmail.com>"]
publish = false

[dependencies]
clap = "2"
env_logger = "0.7"
filetime = "0.2"
id3 = "0.5"
indicatif = "0.14"
log = "0.4"
mp3-duration = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
walkdir = "2.0.1"
